--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMProduct.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMProduct.cshtml
@@ -4,27 +4,27 @@
         <script type="text/javascript">
             var dataLayer = [{
                 'name': '@(gtmProductVM.Name)',
-                'id': '@(gtmProductVM.Id)',
+                'id': '@(gtmProductVM.Id)'
                 @if (gtmProductVM.Price != 0) {
-                    <text>'price': '@(gtmProductVM.Price)',</text>
+                    <text>,'price': '@(gtmProductVM.Price)'</text>
                  }
                 @if (!string.IsNullOrEmpty(gtmProductVM.Brand)) {
-                    <text>'brand': '@(gtmProductVM.Brand)',</text>
+                    <text>,'brand': '@(gtmProductVM.Brand)'</text>
                 }
                 @if (!string.IsNullOrEmpty(gtmProductVM.Category)) {
-                    <text>'category': '@(gtmProductVM.Category)',</text>
+                    <text>,'category': '@(gtmProductVM.Category)'</text>
                 }
                 @if (!string.IsNullOrEmpty(gtmProductVM.Variant)) {
-                    <text>'variant': '@(gtmProductVM.Variant)',</text>
+                    <text>,'variant': '@(gtmProductVM.Variant)'</text>
                 }
                 @if (gtmProductVM.Quantity!=0) {
-                    <text>'quantity': @(gtmProductVM.Quantity),</text>
+                    <text>,'quantity': @(gtmProductVM.Quantity)</text>
                 }
                 @if (!string.IsNullOrEmpty(gtmProductVM.Coupon)) {
-                    <text> 'coupon': '@(gtmProductVM.Coupon)',</text>
+                    <text>,'coupon': '@(gtmProductVM.Coupon)'</text>
                 }
                 @if (gtmProductVM.Position != 0) {
-                    <text> 'position':'@(gtmProductVM.Position)' </text>
+                    <text>,'position':'@(gtmProductVM.Position)'</text>
                 }
             }];
         </script>
