--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMPurchase.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GTMPurchase.cshtml
@@ -19,7 +19,7 @@
         <script type="text/javascript">
             window.ecommerceData.purchase = $.extend(true, {}, window.ecommerceData.purchase);
             window.ecommerceData.purchase.actionfield = $.extend(true, {}, window.ecommerceData.purchase.actionfield);
-            window.ecommerceData.purchase.actionfield = @Html.Raw(gtmActionField)
+            window.ecommerceData.purchase.actionfield = $.extend(true, @Html.Raw(gtmActionField), window.ecommerceData.purchase.actionfield);
             @if (gtmProductsStrings.Any()) {
                 var productString = string.Join(",", gtmProductsStrings);
                 <text>
