--- a/src/Modules/Laser.Orchard.UsersExtensions/Views/EditorTemplates/Parts/UserRegistrationPolicy_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.UsersExtensions/Views/EditorTemplates/Parts/UserRegistrationPolicy_Edit.cshtml
@@ -7,7 +7,7 @@
                           || Model[i].Policy.Type == Laser.Orchard.Policy.PolicyTypeOptions.CommercialUse
                           || Model[i].Policy.Type == Laser.Orchard.Policy.PolicyTypeOptions.ThirdParty;
 
-    <div id="user-registration-policy-@Model[i].PolicyId" data-answer-field="@Html.FieldIdFor(model => model[i].PolicyAnswer)">
+    <div class="user-registration-policy" data-policy-id="@Model[i].PolicyId" data-answer-field="@Html.FieldIdFor(model => model[i].PolicyAnswer)">
         @Html.HiddenFor(m => m[i].PolicyId)
         @Html.HiddenFor(m => m[i].UserHaveToAccept)
         @Html.HiddenFor(m => m[i].Policy.Type)
@@ -16,11 +16,11 @@
         <h3>@Model[i].Policy.Title</h3>
         <div>@Html.Raw(Model[i].Policy.Body)</div>
         @if (Model[i].Policy.Type == null || acceptTypePolicy) {// Privacy
-            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_Accept")">@Html.RadioButtonFor(model => model[i].PolicyAnswer, true, new { id = Html.FieldIdFor(model => model[i].PolicyAnswer) + "_Accept" }) @T("Accept")</label>
-            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_NoAccept")">@Html.RadioButtonFor(model => model[i].PolicyAnswer, false, new { id = Html.FieldIdFor(model => model[i].PolicyAnswer) + "_NoAccept" }) @T("Don't Accept")</label>
+            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_Accept")">@Html.RadioButtonFor(model => model[i].PolicyAnswer, true, new { @class = "select-"+ Model[i].PolicyId + "-Accept" }) @T("Accept")</label>
+            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_NoAccept")">@Html.RadioButtonFor(model => model[i].PolicyAnswer, false, new { @class = "select-" + Model[i].PolicyId + "_NoAccept" }) @T("Don't Accept")</label>
         }
         else { // Regolamento
-            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer))">@Html.EditorFor(model => model[i].PolicyAnswer) @T("I have read the regulation.")</label>
+            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer))">@Html.CheckBoxFor(model => model[i].PolicyAnswer, new { @class = "select-" + Model[i].PolicyId + "-Accept" }) @T("I have read the regulation.")</label>
         }
     </div>
     }
