Code review on mailchimp feature:  - Fixed some typos, some where in file names  - Formatted some code  - Removed some unnecessary using statements.  - User defaults to not register to newsletter on registration, but to    register in most other cases.  - Fixed an NRE when saving empty settings.  - Refactored edit view for UserRegistrationPolicyPart so that radio button    labels correctly work to change the selected values on click.

--- a/src/Modules/Laser.Orchard.UsersExtensions/Views/EditorTemplates/Parts/UserRegistrationPolicy_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.UsersExtensions/Views/EditorTemplates/Parts/UserRegistrationPolicy_Edit.cshtml
@@ -15,9 +15,21 @@
         @Html.HiddenFor(m => m[i].Policy.Body)
         <h3>@Model[i].Policy.Title</h3>
         <div>@Html.Raw(Model[i].Policy.Body)</div>
-        @if (Model[i].Policy.Type == null || acceptTypePolicy) {// Privacy
-            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_Accept")">@Html.RadioButtonFor(model => model[i].PolicyAnswer, true, new { @class = "select-"+ Model[i].PolicyId + "-Accept" }) @T("Accept")</label>
-            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_NoAccept")">@Html.RadioButtonFor(model => model[i].PolicyAnswer, false, new { @class = "select-" + Model[i].PolicyId + "_NoAccept" }) @T("Don't Accept")</label>
+        @if (acceptTypePolicy) {// Privacy
+            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_Accept")">
+                @Html.RadioButtonFor(model => model[i].PolicyAnswer, true, new {
+                   @class = "select-"+ Model[i].PolicyId + "-Accept",
+                   @id = Html.FieldIdFor(model => model[i].PolicyAnswer) + "_Accept"
+               }) 
+                @T("Accept")
+            </label>
+            <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer) + "_NoAccept")">
+                @Html.RadioButtonFor(model => model[i].PolicyAnswer, false, new {
+                   @class = "select-" + Model[i].PolicyId + "_NoAccept",
+                   @id = Html.FieldIdFor(model => model[i].PolicyAnswer) + "_NoAccept"
+               }) 
+                @T("Don't Accept")
+            </label>
         }
         else { // Regolamento
             <label for="@(Html.FieldIdFor(model => model[i].PolicyAnswer))">@Html.CheckBoxFor(model => model[i].PolicyAnswer, new { @class = "select-" + Model[i].PolicyId + "-Accept" }) @T("I have read the regulation.")</label>
