- Fixed Pagination behavior

--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/AjaxList.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/AjaxList.cshtml
@@ -22,7 +22,12 @@
                     });
                     $("#AjaxList").html(result);
                  }
-            });
+            }).done(function () {
+                transformPager();
+                setTimeout(function () {
+                    $("#overlay").fadeOut(300);
+                }, 500);
+            });;
             e.preventDefault();
         });
     });
