Some comments to the js code

--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/AjaxList.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/AjaxList.cshtml
@@ -23,7 +23,7 @@
                     $("#AjaxList").html(result);
                  }
             }).done(function () {
-                transformPager();
+                transformPager();@*this function is defined within the file List.cshtml*@
                 setTimeout(function () {
                     $("#overlay").fadeOut(300);
                 }, 500);
