--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/AjaxList.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/AjaxList.cshtml
@@ -1,7 +1,16 @@
 ﻿<fieldset class="contentItems bulk-items">
-    @Display(Model.ContentItems)
+    @if (Model.ContentItems != null) {
+        @Display(Model.ContentItems)
+    }
+    else if (!string.IsNullOrEmpty(Model.ResultShape)) {
+        @Html.Partial((string)(Model.ResultShape), (object)Model.Items)
+
+    }
+    else {
+        @T("No content found. try again by changing the filters")
+    }
 </fieldset>
-@if((bool)Model.Part.Record.DisplayPager) {
+@if ((bool)Model.Part.Record.DisplayPager) {
     @Display(Model.Pager)
 }
 <script type="text/javascript">
@@ -12,7 +21,7 @@
                 type: "GET",
                 url: url,
                 success: function (data) {
-                    // Handle the fact that returnUrls have likely been generated using the 
+                    // Handle the fact that returnUrls have likely been generated using the
                     // ajax request, hence following them is wrong.
                     var retUrlRegex = /returnUrl=\S*AjaxList/g;
                     var result = data.replace(retUrlRegex, function (x) {
