--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
@@ -94,7 +94,13 @@
                 setTimeout(function () {
                     $("#overlay").fadeOut(300);
                 }, 500);
-            });
+            }).fail(function () {
+                    alert("@T("Page returned an error an results cannot be displayed.")");
+                    setTimeout(function () {
+                        $("#overlay").fadeOut(300);
+                    }, 500);
+                })
+                ;
             e.preventDefault();
         });
         $("#FormAjaxList").submit();
@@ -106,7 +112,7 @@
         <form id="FormAjaxList" method="get">
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title">@T("Manage content")</h3>
+                    <h3 class="box-title">@T("Search filters")</h3>
                 </div>
                 <div class="box-body">
                     <input type='hidden' name='contentid' value='@Request.QueryString["contentid"]' />
