- Modified the way the buildeditor shape is calculated in order to use Placement.info strategies

--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
@@ -24,7 +24,7 @@
                             @Html.Partial((string)(Model.Form))
                         }
                         if (Model.FilterContent != null) {
-                            @Display(_contentManager.BuildEditor(Model.FilterContent));
+                            @Display(Model.FilterContent);
                         }
                     }
                 </div>
