Fixed issue where dynamic projection failed to find its own Id It was looking for it in querystring, while we have it in the model

--- a/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/DynamicProjectionDisplay/List.cshtml
@@ -19,7 +19,7 @@
                     <h3 class="box-title">@T("Search filters")</h3>
                 </div>
                 <div class="box-body">
-                    <input type='hidden' name='contentid' value='@Request.QueryString["contentid"]' />
+                    <input type='hidden' name='contentid' value='@Model.Part.Id' />
                     <input type='hidden' name='page' value='1' />
                     @if (!string.IsNullOrEmpty(Model.Form) || Model.FilterContent != null) {
                         if (!string.IsNullOrEmpty(Model.Form)) {
